--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ input{
     font-family: 'Montserrat', sans-serif;
     font-weight:normal;
     font-size: 16px;
-    width: 480px;
+    width:480px;
+    max-width: 480px;
     height: 64px;
     color: #98A991;
     background-color: white;
